--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* Your Plugin CSS */
 
-main {
+/* main {
     display: flex;
     flex-direction: column;
     align-items: start;
     padding: 0 15px 15px 15px;
     height: 100%;
     gap: 15px;
-}
+} */
